<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_collection"
            android:title="@string/menu_collection" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_achievements"
            android:title="@string/menu_achievements" />
    </group>

    <item android:title="@string/menu_category_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_parental_controls"
                android:icon="@drawable/ic_parental_controls"
                android:title="@string/menu_parental_controls" />
        </menu>
    </item>

</menu>
